# AML-Interface

./: .pre-commit-config.yaml  README.md  pyproject.toml
aml_interface/: aml_interface.py  azure_logging.py
