[project]
name = "aml_interface"
version = "1.1.5"
description = "AML-Interface is developed with the purpose of simplifying the use of AzureML, adding an abstraction layer over repetitive AzureML functions."
authors = [
    {name = "Sebastian Davrieux", email = "s.davrieux@amsterdam.nl"},
    {name = "Diana Epureanu", email = "d.epureanu@amsterdam.nl"},
    {name = "Andrea Lombardo", email = "a.lombardo@amsterdam.nl"},
    {name = "Daan Bloembergen", email = "d.bloembergen@amsterdam.nl"},
]
maintainers = [
    { name = "Computer Vision Team, Gemeente Amsterdam", email = "cvt@amsterdam.nl" },
]
requires-python = ">=3.8, <=3.12"
dependencies = [
    "azure-ai-ml>=1.2.0",
    "azure-monitor-opentelemetry>=1.6.5",
]

[tool.isort]
profile = "black"
multi_line_output = 3
